     the classic Solaris `ksh` implementation (also used in current versions
     of Solaris and illumos based distributions) was strict about following
     (an older revision of) the POSIX standard here, and some use-cases
     misbehaved with our older script spelling. [issue #3196]
   * Revised `drivers/Makefile.am` to not always build `libdummy_serial.la`,
     but only if it is needed by serial-only or modbus drivers.
   * Revised `tools/gitlog2version.sh` helper script (logic added into
     a new `tools/semver-compare.sh`) with a mode to expand NUT SEMVER
     components into wide zero-padded numbers, so it is easier to
     alphanumerically compare different releases regardless of version
     component lengths in digits (and differences in their amounts). You can
     request an inverse operation with `NUT_VERSION_STRIP_LEADING_ZEROES=true`.
     Added tests to cover different shell interpreter platforms (piggy-back
     on the `tests/nut-driver-enumerator-test.sh` script), and made sure
     that outputs of legacy-mode processing (with `NUT_VERSION_DEFAULT`
     string provided by caller or saved in a tarball) are consistent with
     git-mode. The new `tools/semver-compare.sh` helper can be used directly
     to expand and strip version strings, sort and compare multiple versions
     as one simple operation. [issue #3055, PRs #3213, #3217]
   * Dropped the `compile` script from Git sources. It originates from automake
     and is added to work area (if missing) during `autogen.sh` rituals anyway.
     It is still distributed as part of `make dist` tarball. [#1209]

 - Upstreamed reference packaging recipes (DEB, RPM) from the 42ITy project
   which can be used with OBS (Open Build Service by SUSE), both to support
   end-user testing of NUT development, and to have a yet another NUT CI farm
   player with a distinct opinion on code quality. Many of the changes listed
   above happened thanks to this effort, and due to concerns raised by OBS